--- a/portfolio.html
+++ b/portfolio.html
@@ -326,6 +326,20 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-wrap">
+          <p class="footer-socials-text">Subscribe</p>
+          <form class="footer-form" name="footer-form" autocomplete="on" method="POST">
+            <label for="input-footer-email" class="footer-label">
+              <input type="email" name="footer-input" id="input-footer-email" class="footer-input" placeholder="E-mail">
+            </label>
+            <button type="submit" class="button main-button footer-form-btn">
+              Subscribe
+              <svg class="footer-icon-form" width="24" height="24">
+                <use href="./images/icons.svg#icon-footer-form"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
